[package]
name = "aoc2019"
version = "0.1.0"
authors = ["jpbougie <jean-philippe@demarque.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "0.2.4"
regex = "1.3.1"
num = "0.2.0"
termion = "1.5.4"
pathfinding = "2.0.1"
itertools = "0.8.2"
